--- a/CoviCURE/Forms/Vaccine/card1.ui
+++ b/CoviCURE/Forms/Vaccine/card1.ui
@@ -16,8 +16,8 @@
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>100</y>
+     <x>40</x>
+     <y>90</y>
      <width>1191</width>
      <height>601</height>
     </rect>
@@ -28,6 +28,9 @@ border-radius: 15px;</string>
    </property>
    <property name="title">
     <string/>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
    </property>
    <widget class="QLineEdit" name="lineEditName">
     <property name="geometry">
@@ -708,9 +711,9 @@ color: rgb(255, 255, 255);</string>
   <widget class="QLabel" name="que1">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>1181</width>
+     <x>40</x>
+     <y>0</y>
+     <width>1185</width>
      <height>81</height>
     </rect>
    </property>
