--- a/CoviCURE/Forms/Main/login.ui
+++ b/CoviCURE/Forms/Main/login.ui
@@ -43,7 +43,6 @@ border-radius: 20px;</string>
     </property>
     <property name="font">
      <font>
-      <family>Segoe UI</family>
       <pointsize>36</pointsize>
       <italic>false</italic>
       <bold>true</bold>
@@ -89,7 +88,6 @@ color: rgb(255, 255, 255);
     </property>
     <property name="font">
      <font>
-      <family>Segoe UI</family>
       <pointsize>16</pointsize>
       <italic>false</italic>
       <bold>false</bold>
@@ -122,7 +120,6 @@ border-radius: 10px;</string>
     </property>
     <property name="font">
      <font>
-      <family>Segoe UI</family>
       <pointsize>26</pointsize>
       <italic>false</italic>
       <bold>false</bold>
@@ -156,7 +153,6 @@ color: rgb(255, 255, 255);</string>
     </property>
     <property name="font">
      <font>
-      <family>Segoe UI</family>
       <pointsize>16</pointsize>
       <italic>false</italic>
       <bold>false</bold>
@@ -192,7 +188,6 @@ border-radius: 10px;</string>
     </property>
     <property name="font">
      <font>
-      <family>Segoe UI</family>
       <pointsize>26</pointsize>
       <italic>false</italic>
       <bold>false</bold>
@@ -207,38 +202,6 @@ color: rgb(255, 255, 255);</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_login">
-    <property name="geometry">
-     <rect>
-      <x>470</x>
-      <y>460</y>
-      <width>181</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="sizePolicy">
-     <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
-      <horstretch>0</horstretch>
-      <verstretch>0</verstretch>
-     </sizepolicy>
-    </property>
-    <property name="font">
-     <font>
-      <family>Arial Rounded MT Bold</family>
-      <pointsize>14</pointsize>
-      <italic>false</italic>
-      <bold>false</bold>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(255, 255, 255, 255), stop:0.629213 rgba(84, 154, 232, 255));
-font: 14pt &quot;Arial Rounded MT Bold&quot;;
-border-radius: 6px;</string>
-    </property>
-    <property name="text">
-     <string>Login</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_back">
@@ -258,7 +221,6 @@ border-radius: 6px;</string>
     </property>
     <property name="font">
      <font>
-      <family>Arial Rounded MT Bold</family>
       <pointsize>14</pointsize>
       <italic>false</italic>
       <bold>false</bold>
@@ -273,8 +235,33 @@ border-radius: 6px;</string>
      <string>Back</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="pushButton_login">
+    <property name="geometry">
+     <rect>
+      <x>540</x>
+      <y>430</y>
+      <width>101</width>
+      <height>101</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="../../resource.qrc">
+      <normaloff>:/resources/img/user.png</normaloff>:/resources/img/user.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>85</width>
+      <height>85</height>
+     </size>
+    </property>
+   </widget>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="../../resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
